Womens and limelight section added
styles: reused mens styles for both with small variations

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <li><a href="#deals" class="section-link">Shop</a></li>
                             <li><a href="#mens" class="section-link">Men</a></li>
                             <li><a href="#womens" class="section-link">Women</a></li>
-                            <li><a href="#combos" class="section-link">Combos</a></li>
+                            <li><a href="#limelight" class="section-link">Combos</a></li>
                             <li><a href="#new-arrivals" class="section-link">Joggers</a></li>
                         </ul>
                     </nav>
@@ -347,5 +347,159 @@
             <!-- Wrapper -->
          </section>
         <!-- #mens section end -->
+
+        <!-- #womens -->
+         <section id="womens">
+            <section class="wrapper">
+                <section class="womens-container">
+                    <h2>Categories For Women</h2>
+                    <section class="categories">
+                        <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-12.jpg" alt="Hoodies & Sweetshirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Hoodies & Sweetshirt</h3>
+                                    <a href="#" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-1 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-13.jpg" alt="coats & parkas" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Coats & Parkas</h3>
+                                    <a href="#" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-2 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-14.jpg" alt="Tees & T-shirt" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Tees & T-Shirt</h3>
+                                    <a href="#" class="explore-now">Explore Now!</a>
+                                </div>
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-3 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-15.jpg" alt="Boxers" />
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Boxers</h3>
+                                    <a href="#" class="explore-now">Explore Now!</a>
+                                </div>                                
+                                <div class="arrow">
+                                    <img src="/assets/images/arrow-right.svg" alt="right arrow">
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-4 -->
+                    </section>
+                    <!-- .categories -->
+                </section>
+                <!-- .womens-container -->
+            </section>
+            <!-- Wrapper -->
+         </section>
+        <!-- #womens section end -->
+
+        <!-- #limelight -->
+         <section id="limelight">
+            <section class="wrapper">
+                <section class="limelight-container">
+                    <h2>In The Limelight</h2>
+                    <section class="categories">
+                        <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-16.jpg" alt="black Sweetshirt" />
+                                <div><img src="/assets/images/wishlist.svg" alt="Heart overlay" class="heart-overlay"></div>
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Black Sweatshirt with ...</h3>
+                                    <a href="#" class="explore-now">Jhavi's Brand</a>
+                                </div>
+                                <div class="price">
+                                    <div>$123.00</div>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-1 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-17.jpg" alt="line pattern black hat dress" />
+                                <div><img src="/assets/images/wishlist.svg" alt="Heart overlay" class="heart-overlay"></div>
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>line Pattern Black H...</h3>
+                                    <a href="#" class="explore-now">AS's Brand</a>
+                                </div>
+                                <div class="price">
+                                    <div>$37.00</div>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-2 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-18.jpg" alt="Black shorts" />
+                                <div><img src="/assets/images/wishlist.svg" alt="Heart overlay" class="heart-overlay"></div>
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Black Shorts</h3>
+                                    <a href="#" class="explore-now">MM's Brand</a>
+                                </div>
+                                <div class="price">
+                                    <div>$37.00</div>
+                                </div>  
+                            </div>
+                        </section>
+                        <!-- .category-container-3 -->
+                         <section class="category-container">
+                            <div class="img-container">
+                                <img src="/assets/images/img-19.jpg" alt="Lavender Hoodie" />
+                                <div><img src="/assets/images/wishlist.svg" alt="Heart overlay" class="heart-overlay"></div>
+                            </div>
+                            <div class="category-content">
+                                <div class="left-section">
+                                    <h3>Lavender Hoodie With...</h3>
+                                    <a href="#" class="explore-now">Nike's Brand</a>
+                                </div>                                
+                                <div class="price">
+                                    <div>$119.00</div>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- .category-container-4 -->
+                    </section>
+                    <!-- .categories -->
+                </section>
+                <!-- .limelight-container -->
+            </section>
+            <!-- Wrapper -->
+         </section>
+        <!-- #limelight section end -->
     </body>
 </html>
