Brands html Added

--- a/index.html
+++ b/index.html
@@ -423,6 +423,44 @@
          </section>
         <!-- #womens section end -->
 
+        <!-- brand deals -->
+         <section class="brand-deals">
+            <section class="wrapper">
+                <section class="brand-deals-container">
+                    <div class="top">
+                        <h1>Top Brands Deal</h1>
+                        <p>Up To <span>60%</span>of on brands</p>
+                    </div>
+                    <!-- .top -->
+                     <div class="bottom">
+                        <div class="brands">
+                            <img src="/assets/images/nike.jpg" alt="Nike logo" />
+                        </div>
+                        <!-- .brands -->
+                        <div class="brands">
+                            <img src="/assets/images/H&M.jpg" alt="H&M logo" />
+                        </div>
+                        <!-- .brands -->
+                        <div class="brands">
+                            <img src="/assets/images/levis.jpg" alt="Levi's logo" />
+                        </div>
+                        <!-- .brands -->
+                         <div class="brands">
+                            <img src="/assets/images/USPA.jpg" alt="US Polo ASSN logo" />
+                        </div>
+                        <!-- .brands -->
+                         <div class="brands">
+                            <img src="/assets/images/puma.jpg" alt="Puma logo" />
+                        </div>
+                        <!-- .brands -->
+                     </div>
+                </section>
+                <!-- .brand-dels-container -->
+            </section>
+            <!-- .wrapper -->
+         </section>
+        <!-- brand deals end -->
+
         <!-- #limelight -->
          <section id="limelight">
             <section class="wrapper">
