--- a/index.html
+++ b/index.html
@@ -424,32 +424,32 @@
         <!-- #womens section end -->
 
         <!-- brand deals -->
-         <section class="brand-deals">
+         <section id="brand-deals">
             <section class="wrapper">
-                <section class="brand-deals-container">
+                <section class="brand-deals-container scroll-animation">
                     <div class="top">
                         <h1>Top Brands Deal</h1>
-                        <p>Up To <span>60%</span>of on brands</p>
+                        <p>Up To <span>60%</span> off on brands</p>
                     </div>
                     <!-- .top -->
                      <div class="bottom">
-                        <div class="brands">
+                        <div class="brand">
                             <img src="/assets/images/nike.jpg" alt="Nike logo" />
                         </div>
                         <!-- .brands -->
-                        <div class="brands">
+                        <div class="brand">
                             <img src="/assets/images/H&M.jpg" alt="H&M logo" />
                         </div>
                         <!-- .brands -->
-                        <div class="brands">
+                        <div class="brand">
                             <img src="/assets/images/levis.jpg" alt="Levi's logo" />
                         </div>
                         <!-- .brands -->
-                         <div class="brands">
+                         <div class="brand">
                             <img src="/assets/images/USPA.jpg" alt="US Polo ASSN logo" />
                         </div>
                         <!-- .brands -->
-                         <div class="brands">
+                         <div class="brand">
                             <img src="/assets/images/puma.jpg" alt="Puma logo" />
                         </div>
                         <!-- .brands -->
