Small changed to brands deals html

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
                         </div>
                         <!-- .brands -->
                      </div>
+                     <!-- .bottom -->
                 </section>
                 <!-- .brand-dels-container -->
             </section>
