Feedback Html added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <link rel="stylesheet" href="/assets/css/index.css">
         <script src="/assets/js/index.js"></script>
         <script src="/assets/js/carousel.js"></script>
+        <Script src="/assets/js/slider.js"></Script>
     </head>
     <body>
         <!-- Theme toggle button -->
@@ -214,7 +215,7 @@
         <!-- #fashion -->
 
         <!-- #mens -->
-         <section id="mens">
+        <section id="mens">
             <section class="wrapper">
                 <section class="mens-container">
                     <h2>Categories For Men</h2>
@@ -345,11 +346,11 @@
                 <!-- .mens-container -->
             </section>
             <!-- Wrapper -->
-         </section>
+        </section>
         <!-- #mens section end -->
 
         <!-- #womens -->
-         <section id="womens">
+        <section id="womens">
             <section class="wrapper">
                 <section class="womens-container">
                     <h2>Categories For Women</h2>
@@ -420,11 +421,11 @@
                 <!-- .womens-container -->
             </section>
             <!-- Wrapper -->
-         </section>
+        </section>
         <!-- #womens section end -->
 
-        <!-- brand deals -->
-         <section id="brand-deals">
+        <!-- #brand-deals deals -->
+        <section id="brand-deals">
             <section class="wrapper">
                 <section class="brand-deals-container scroll-animation">
                     <div class="top">
@@ -459,11 +460,11 @@
                 <!-- .brand-dels-container -->
             </section>
             <!-- .wrapper -->
-         </section>
-        <!-- brand deals end -->
+        </section>
+        <!-- #brand-deals deals end -->
 
         <!-- #limelight -->
-         <section id="limelight">
+        <section id="limelight">
             <section class="wrapper">
                 <section class="limelight-container">
                     <h2>In The Limelight</h2>
@@ -538,7 +539,84 @@
                 <!-- .limelight-container -->
             </section>
             <!-- Wrapper -->
-         </section>
+        </section>
         <!-- #limelight section end -->
+
+        <!-- #feedback -->
+        <section id="feedback">
+            <section class="wrapper">
+                <section class="feedback-container">
+                    <h1>Feedback</h1>
+                    <div class="feedback-slider-wrapper">
+                        <section class="feedback-slider" id="feedbackSlider">
+                            <div class="feedback-card" data-index="0">
+                                <div class="top">
+                                    <img src="/assets/images/span-1.svg" alt="span 1" />
+                                    <div class="star-review">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                    </div>
+                                    <!-- .star-review -->
+                                </div>
+                                <!-- .top -->
+                                <h3>Floyd Miles</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. 
+        Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                            </div>
+                            <!-- .feedback-card -->
+                            <div class="feedback-card"  data-index="1">
+                                <div class="top">
+                                    <img src="/assets/images/span-2.svg" alt="span 2" />
+                                    <div class="star-review">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                    </div>
+                                    <!-- .star-review -->
+                                </div>
+                                <!-- .top -->
+                                <h3>Ronald Richards</h3>
+                                <p>ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                            </div>
+                            <!-- .feedback-card -->
+                            <div class="feedback-card"  data-index="2">
+                                <div class="top">
+                                    <img src="/assets/images/span-3.svg" alt="span 2" />
+                                    <div class="star-review">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                        <img src="/assets/images/star.svg" alt="star">
+                                    </div>
+                                    <!-- .star-review -->
+                                </div>
+                                <!-- .top -->
+                                <h3>Savannah Nguyen</h3>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. 
+    Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                            </div>
+                            <!-- .feedback-card -->
+                        </section>
+                        <!-- .feedback-slider -->
+                    </div>
+                    <!-- .feedback-slider-wrapper -->
+                    <section class="nav-active">
+                        <div class="dot active" data-slide="0"></div>
+                        <div class="dot" data-slide="1"></div>
+                        <div class="dot" data-slide="2"></div>
+                    </section>
+                    <!-- .nav-active -->
+                </section>
+                <!-- .feedback-container -->
+            </section>
+            <!-- .wrapper -->
+        </section>
+        <!-- #feedback -->
     </body>
 </html>
