--- a/index.html
+++ b/index.html
@@ -618,5 +618,85 @@
             <!-- .wrapper -->
         </section>
         <!-- #feedback -->
+
+
+        <!-- #footer -->
+        <footer>
+            <section class="wrapper">
+                <section class="footer-container">
+                    <section class="top">
+                        <div class="info-content">
+                            <h2>Need Help</h2>
+                            <ul>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Track Order</a></li>
+                                <li><a href="#">Returns & Refunds</a></li>
+                                <li><a href="#">FAQ's</a></li>
+                                <li><a href="#">Career</a></li>
+                            </ul>
+                        </div>
+                        <!-- .info-content -->
+                        <div class="info-content">
+                            <h2>Company</h2>
+                            <ul>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">euphoria Blog</a></li>
+                                <li><a href="#">euphoriastan</a></li>
+                                <li><a href="#">Collaboration</a></li>
+                                <li><a href="#">Media</a></li>
+                            </ul>
+                        </div>
+                        <!-- .info-content -->
+                        <div class="info-content">
+                            <h2>More Info</h2>
+                            <ul>
+                                <li><a href="#">Term and Conditions</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Shipping Policy</a></li>
+                                <li><a href="#">Sitemap</a></li>
+                            </ul>
+                        </div>
+                        <!-- .info-content -->
+                        <div class="info-content">
+                            <h2>Location</h2>
+                            <ul>
+                                <li><a href="#">support@euphoria.in</a></li>
+                                <li><a href="#">Eklingpura Chouraha, Ahmedabad Main Road</a></li>
+                                <li><a href="#">(NH 8- Near Mahadev Hotel) Udaipur, India- 313002</a></li>
+                            </ul>
+                        </div>
+                        <!-- .info-content -->
+                    </section>
+                    <!-- .top -->
+                    <section class="center">
+                        <div class="social">
+                            <a href="#"><img src="/assets/images/facebook.svg" alt="Facebook" /></a>
+                            <a href="#"><img src="/assets/images/instagram.svg" alt="Instagram" /></a>
+                            <a href="#"><img src="/assets/images/twitter.svg" alt="Twitter" /></a>
+                            <a href="#"><img src="/assets/images/linkedin.svg" alt="LinkedIn" /></a>
+                        </div>
+                        <!-- .social -->
+                        <div class="download-app">
+                            <h3>Download The App</h3>
+                            <div class="app-store">
+                                <a href="#"><img src="/assets/images/android-app.svg" alt="App Store" /></a>
+                                <a href="#"><img src="/assets/images/Apple-store.svg" alt="Play Store" /></a>
+                        </div>
+                    </section>
+                    <!-- .center -->
+                    <section class="popular-categories">
+                        <h4>Popular Categories</h4>
+                        <img src="/assets/images/right-arrow-light.svg" alt="">
+                    </section>
+                    <!-- .popular-categories -->
+                    <section class="copyright">
+                        <p>Copyright &copy; 2023 Euphoria Folks Pvt Ltd. All rights reserved.</p>
+                    </section>
+                </section>
+                <!-- .footer-container -->
+            </section>
+            <!-- .wrapper -->
+        </footer>
+        <!-- #footer -->
     </body>
 </html>
