--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                         <section class="feedback-slider" id="feedbackSlider">
                             <div class="feedback-card" data-index="0">
                                 <div class="top">
-                                    <img src="/assets/images/span-1.svg" alt="span 1" />
+                                    <img src="./assets/images/span-1.svg" alt="span 1" />
                                     <div class="star-review">
                                         <img src="./assets/images/star.svg" alt="star">
                                         <img src="./assets/images/star.svg" alt="star">
